tests/ast_interpreter/err_list_index_negative.expected
<string>:3:11: error: index cannot be negative
    print(list[-1]);
          ^^^^^^^^
